--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.2.RELEASE</version>
+		<version>2.4.5</version>
 		<relativePath />
 		<!-- lookup parent from repository -->
 	</parent>
@@ -52,9 +52,9 @@
 
 	<properties>
 		<java.version>8</java.version>
-		<jackson.version>2.12.1</jackson.version>
+		<jackson.version>2.12.3</jackson.version>
 		<spring.version>5.3.7</spring.version>
-		<pmd.version>6.13.0</pmd.version>
+		<pmd.version>6.34.0</pmd.version>
 	</properties>
 
 	<dependencies>
@@ -77,6 +77,12 @@
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
@@ -90,13 +96,13 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.29</version>
+			<version>1.7.30</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>okhttp</artifactId>
-			<version>3.14.4</version>
+			<version>3.14.9</version>
 			<scope>test</scope>
 		</dependency>
 
