--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<artifactId>dsv-sdk-java</artifactId>
 	<version>1.0</version>
 	<name>dsv-sdk-java</name>
-	<description>The Thycotic DevOps Secrets Vault Java SDK</description>
+	<description>The Delinea DevOps Secrets Vault Java SDK</description>
 
 	<developers>
 		<developer>
