Updated application.properties with the correct config values for DSV

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,14 @@
 # Delinea Secret Server Java SDK configuration
-secret_server.oauth2.username =
-secret_server.oauth2.password =
+secrets_vault.client_id = 359f8c9f-d555-40ff-a036-ce95432e708b
+secrets_vault.client_secret = xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # and
-secret_server.tenant =
+secrets_vault.tenant =
 # or
-#secret_server.oauth2.token_url_template =
+#secrets_vault.base_url_template = https://%s.secretsvaultcloud.%s/v1
 # and
-#secret_server.api_root_url_template =
+#secrets_vault.tld = eu
 # or
-#secret_server.oauth2.token_url =
-# and
-# secret_server.api_root_url =
 # For the Spring Boot (example) Application
 # It can be specified here or via the command-line
-#secret.id =
+#secret.path = path/to/secret
 #logging.level.org.springframework.web.client=INFO
