--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,4 +33,4 @@ jobs:
 
       - name: Deploy with Maven
         run: |
-          mvn -P github -B -C -ff -ntp -U deploy -Dregistry=https://maven.pkg.github.com/thycotic -Dtoken=GH_TOKEN
+          mvn gpg:sign-and-deploy-file -P github -B -C -ff -ntp -U deploy -Dregistry=https://maven.pkg.github.com/thycotic -Dtoken=GH_TOKEN
