--- a/pom.xml
+++ b/pom.xml
@@ -163,11 +163,10 @@
 							<goal>sign</goal>
 						</goals>
 						<configuration>
-							<keyname>${gpg.keyname}</keyname>
-							<passphraseServerId>${gpg.keyname}</passphraseServerId>
 							<gpgArguments>
-                                <gpgArgument>-ab</gpgArgument>
-                            </gpgArguments>
+								<arg>--pinentry-mode</arg>
+								<arg>loopback</arg>
+							</gpgArguments>
 						</configuration>
 					</execution>
 				</executions>
