Rebrand the package from thycotic to delinea
- Renamed the package to delinea
- Renamed the thycotic folder to delinea
- Updated the readme badges to reflect the new GitHub location

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<!-- lookup parent from repository -->
 	</parent>
 
-	<groupId>com.thycotic.secrets</groupId>
+	<groupId>com.delinea.secrets</groupId>
 	<artifactId>dsv-sdk-java</artifactId>
 	<version>1.0.1</version>
 	<name>dsv-sdk-java</name>
@@ -44,8 +44,8 @@
 	</licenses>
 
 	<scm>
-		<connection>https://github.com/thycotic/${project.artifactId}.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/thycotic/${project.artifactId}.git</developerConnection>
+		<connection>https://github.com/DelineaXPM/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/DelineaXPM/${project.artifactId}.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
