--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
 
 	<developers>
 		<developer>
-			<id>amigus</id>
-			<name>Adam Migus</name>
-			<email>adam@migus.org</email>
+			<id>delineaKreahl</id>
+			<name>Delinea Integrations</name>
+			<email>GitHub@delinea.com</email>
 		</developer>
 	</developers>
 
