--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -7,6 +7,8 @@ plugins:
       ref: v0.0.5
       uri: https://github.com/trunk-io/plugins
 lint:
+  disabled:
+    - semgrep
   enabled:
     - semgrep@0.118.0
     - shellcheck@0.8.0
