--- a/.gitignore
+++ b/.gitignore
@@ -83,4 +83,6 @@ buildNumber.properties
 # Ignore all local history of files
 .history
 
+### mac
+.DS_Store
 # End of https://www.gitignore.io/api/java,maven,visualstudiocode
